Added inventory
